infra/k8s/istio/ingress-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: securerag-gateway
  namespace: securerag-hub
  labels:
    app.kubernetes.io/part-of: securerag-hub
    app.kubernetes.io/component: service-mesh
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
